# tactic_sfml

./: CMakeLists.txt  README.md  output.txt
src/: button.cpp  main.cpp  main_animated_sprite_smooth.cpp  mapUtilities.cpp  my_drawing_0.cpp
src/Map/: TurnSM.cpp  mapBuilder.cpp  mapLogic.cpp  tile.cpp
src/TurnLogic/: AllayTurn.cpp  GameFinished.cpp  TurnState.cpp  enemyTurn.cpp
src/TurnLogic/Actions/: 0_chooseTile.cpp  1_tileSelected.cpp  2_chooseAttack.cpp  3_attack.cpp
src/Utilities/: actionState.cpp  animState.cpp  animatedSprite.cpp  attackGui.cpp  button.cpp  pathAlgorithm.cpp  unit.cpp  weapon.cpp
src/headers/: 0_chooseTile.h  1_tileSelected.h  2_chooseAttack.h  3_attack.h  GameFinished.h  TurnSM.h  actionState.hpp  allayTurn.h  animState.h  animatedSprite.h  attackGui.h  button.h  enemyTurn.h  mapBuilder.h  mapLogic.h  mapUtilities.h  pathAlgorithm.h  state.h  state.hpp  tile.h  turnState.hpp  unit.h  weapon.h
src/models/: unit.cpp
